fix bug with take a break popup visibility

--- a/css/main.less
+++ b/css/main.less
@@ -1835,7 +1835,7 @@ ul {
         top: 50%;
         left: 50%;
         width: 620px;
-        margin-top: -350px;
+        margin-top: -276px;
         margin-left: -298px;
         text-align: left;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
@@ -2193,7 +2193,7 @@ ul {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px), (max-height: 600px) {
     .popup-layout {
         .popup {
             top: 0;
